--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
-foo = foo version 6
-democonfigclient.message=hello spring io
+foo = foo version 7
+democonfigclient.message=hello spring cloud~
 
 # routes to serviceId
 # routes to url
